Fix alignment in auth list

--- a/src/auth/auth.scss
+++ b/src/auth/auth.scss
@@ -124,7 +124,6 @@
       font-size: 18px;
       vertical-align: middle;
       margin-right: 8px;
-      margin-bottom: 1px;
       fill: currentColor;
     }
   }
@@ -135,6 +134,5 @@
 
   .info-icon {
     margin-left: 4px;
-    margin-top: 2px;
   }
 }
